# algorithms-3sem

./: .gitignore  a.tex  callgrind.out.76103  callgrind.out.82172  my  smbd
1-contest/: Makefile  a.cpp  b.cpp  c.cpp  d.cpp  tests.py
2-contest/: a.cpp  b.cpp  d.cpp  e.cpp  g.cpp  gen-a-tests.py  gen-b-tests.py  gen-d-tests.py  gen-e-tests.py  smbd.cpp  с.cpp
2-contest/d-answers/: 2.txt  3.txt
2-contest/d-tests/: 1.txt  4.txt  5.txt
3-contest/: a.cpp  b-hashes.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  test-b.py  test-e.py
4-contest/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  test-a.py  test-c.py
HashesLab/: solution.ipynb
HashesLab/HashTable/: CMakeLists.txt  build.sh
data/: input.txt  my.txt
data/tests/: 01  05  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  (+23 more)
